# openadr-example

vtn/: main.py  pyproject.toml  server.key  test_cert.csr
vtn/.devcontainer/: devcontainer.json
vtn/openleadr_impl/: messaging.py  server.py
vtn/openleadr_impl/infra/: dynamodb.py
vtn/openleadr_impl/model/: user.py
vtn/openleadr_impl/patch/: README.md  patch_timedelta.py
vtn/openleadr_impl/repository/: dynamodb.py  utils.py
vtn/openleadr_impl/service/: event_service.py  opt_service.py  poll_service.py  registration_service.py  report_service.py  vtn_service.py
vtn/openleadr_impl/utils/: utils.py
vtn/scripts/: README.md  config.sh  test_case_1.sh  test_case_10.sh  test_case_11.sh  test_case_12.sh  test_case_13.sh  test_case_14.sh  test_case_4.sh  test_case_5.sh  test_case_6.sh  test_case_7.sh  test_case_8.sh  test_case_9.sh  test_case_template.sh  結合テストチェックリスト.md  結合テストチェックリスト_1.md  結合テストチェックリスト_10.md  結合テストチェックリスト_11.md  結合テストチェックリスト_12.md  結合テストチェックリスト_13.md  結合テストチェックリスト_14.md  結合テストチェックリスト_2.md  結合テストチェックリスト_3.md  結合テストチェックリスト_4.md  結合テストチェックリスト_5.md  結合テストチェックリスト_6.md  結合テストチェックリスト_7.md  結合テストチェックリスト_8.md  結合テストチェックリスト_9.md
vtn/scripts/.devcontainer/: devcontainer.json
vtn/scripts/cases/case1/payloads/: oadr_created_report.xml  oadr_created_report.xml.tmpl  oadr_poll.xml  (+2 more)
vtn/tests/: test_messaging.py  チェックリスト.md
vtn/tests/patch/: test_patch_timedelta.py
vtn/tests/repository/: test_dynamodb_repository.py
vtn/tests/service/: test_aa.py  test_vtn_service.py  単体テストチェックリスト.md
vtn/tests/utils/: client_cert_for_test.crt  test_utils.py
(+27 files in other folders)
